deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-webhook
  namespace: event-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-webhook
  template:
    metadata:
      labels:
        app: event-webhook
    spec:
      containers:
        - name: webhook
          image: jessedearing/webhook:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
          ports:
            - containerPort: 443
          volumeMounts:
            - mountPath: /app/tls
              name: tls
      volumes:
        - name: tls
          secret:
            secretName: webhook-tls
      serviceAccountName: event-webhook
---
apiVersion: v1
kind: Service
metadata:
  name: event-webhook
  namespace: event-webhook
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: event-webhook
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: "event-webhook/webhook-tls"
  name: "event-webhook.jesse.dev"
webhooks:
  - name: "event-webhook.jesse.dev"
    namespaceSelector:
      matchLabels:
        requireApproval: "true"
    rules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["replicasets"]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: "event-webhook"
        name: "event-webhook"
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    timeoutSeconds: 5
